# sfcgal-sys

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
sfcgal_sys/: all.html  constant.sfcgal_buffer3d_type_t_SFCGAL_BUFFER3D_CYLSPHERE.html  constant.sfcgal_buffer3d_type_t_SFCGAL_BUFFER3D_FLAT.html  constant.sfcgal_buffer3d_type_t_SFCGAL_BUFFER3D_ROUND.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_GEOMETRYCOLLECTION.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_LINESTRING.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_MULTILINESTRING.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_MULTIPOINT.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_MULTIPOLYGON.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_MULTISOLID.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_POINT.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_POLYGON.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_POLYHEDRALSURFACE.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_SOLID.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_TRIANGLE.html  constant.sfcgal_geometry_type_t_SFCGAL_TYPE_TRIANGULATEDSURFACE.html  fn.initialize.html  fn.sfcgal_approx_convex_partition_2.html  fn.sfcgal_full_version.html  fn.sfcgal_geometry_alpha_shapes.html  fn.sfcgal_geometry_approximate_medial_axis.html  fn.sfcgal_geometry_area.html  fn.sfcgal_geometry_area_3d.html  fn.sfcgal_geometry_as_hexwkb.html  fn.sfcgal_geometry_as_obj.html  fn.sfcgal_geometry_as_obj_file.html  fn.sfcgal_geometry_as_text.html  (+141 more)
(+7 files in other folders)
