[package]
name = "sfcgal-sys"
version = "0.6.0"
authors = ["Matthieu Viry <matthieu.viry@univ-grenoble-alpes.fr>"]
license = "MIT/Apache-2.0"
edition = "2021"
build = "build.rs"
description = """
Low-level FFI bindings to SFCGAL.
"""
readme = "README.md"
homepage = "https://github.com/mthh/sfcgal-sys"
documentation = "https://mthh.github.io/sfcgal-sys/sfcgal_sys/"
repository = "https://github.com/mthh/sfcgal-sys"
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0"
